# AERO

./: .gitignore  CNAME  LICENSE  Readme.md
AERO-latency-rig/: AERO-latency-rig-architecture.md  atomic.py  pyproject.toml
AERO-latency-rig/aero_rig.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
AERO-latency-rig/rig/: allocation.py  cli.py  driver.py  envelope.py  identity.py  manifest.py  preflight.py  sweeper.py
AERO-latency-rig/rig/host/: __init__.py  baseline.py  macos.py
AERO-latency-rig/rig/schemas/: __init__.py  allocation_entry.schema.json  allocation_registry_event.schema.json  decision_report.schema.json  fixture_manifest.schema.json  head_object_record.schema.json  host_baseline_diff.schema.json  host_fingerprint.schema.json  host_suitability.schema.json  identity.schema.json  inventory_snapshot.schema.json  inventory_snapshot_raw.schema.json  invocation_envelope.schema.json  manifest_event.schema.json  network_probe.schema.json  postmortem.schema.json  reconciliation.schema.json  run_record.schema.json  session_envelope.schema.json  session_manifest.schema.json  sweep_correlation.schema.json  timer_sanity.schemas.json
AERO-latency-rig/rig/selftest/: runner.py
AERO-latency-rig/tests/: test_allocation.py  test_atomic.py  test_cli.py  test_correlation.py  test_driver.py  test_envelope.py  test_head_object.py  test_host.py  test_identity.py  test_lock.py  test_manifest.py  test_preflight.py  test_projection.py  test_schemas.py  test_selftest.py  test_sweeper.py  test_validator.py
ARCHITECTURE_DESIGN_REVIEW/: ADR-002-workload-class.md  (+6 more)
(+143 files in other folders)
