[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aero-rig"
version = "0.1.0"
requires-python = "==3.11.*"
dependencies = [
    "boto3>=1.34",
    "jsonschema>=4.21",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1",
]

[project.scripts]
rig = "rig.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["rig*"]